[project]
name = "APZmedia Clean File Name Nodes"
description = "A set of custom nodes to build and sanitize text to make clean file names from strings."
version = "1.6.5"
license = "MIT"
dependencies = ["unidecode"]

[project.urls]
Repository = "https://github.com/APZmedia/ComfyUI-APZmedia-cleanName-from-string"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "APZmedia"
DisplayName = "APZmedia Clean Name"
Icon = 
